--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
         >
       </div>
       <div class="half-widit">
-        <img src="Group 33086.png" alt="" />
+        <img src="images/Group 33086.png" alt="" />
       </div>
     </section>
     <section class="top-banner">
       <div class="half-widit">
-        <img src="Group 33080 (1).png" alt="" />
+        <img src="images/Group 33080 (1).png" alt="" />
       </div>
       <div class="half-widit">
         <h1>
@@ -69,7 +69,7 @@
         <span id="name">LASTET</span> <span id="lil"> WORKING PROJECT</span>
       </h1>
       <div class="card">
-        <img src="image 5.png" alt="Avatar" style="width: 100%" />
+        <img src="images/image 5.png" alt="Avatar" style="width: 100%" />
         <div class="container">
           <h4>Power-x-gym (gym website)</h4>
           <p>
@@ -79,7 +79,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="image 4.png" alt="Avatar" style="width: 100%" />
+        <img src="images/image 4.png" alt="Avatar" style="width: 100%" />
         <div class="container">
           <h4>Creative Agency</h4>
           <p>
@@ -89,7 +89,7 @@
         </div>
       </div>
       <div class="card">
-        <img src="image 8.png" alt="Avatar" style="width: 100%" />
+        <img src="images/image 8.png" alt="Avatar" style="width: 100%" />
         <div class="container">
           <h4>Hard Rock Music</h4>
           <p>
@@ -107,13 +107,13 @@
         href="https://www.linkedin.com/in/kinshuk-mohanto-135175191/"
         >Let's Chat</a
       >
-      <img id="my" src="Group_33094_1.png" alt="" />
+      <img id="my" src="images/Group_33094_1.png" alt="" />
       <h5 id="connected">Stay connected</h1>
       <h5 id="mail">kinshuk910@gmail.com</h5>
       <div class="imgs">
-        <img class="images" src="Group 33059.png" alt="">
-        <img class="images" src="image 6.png" alt="">
-        <img class="images" src="image 7.png" alt="">
+        <img class="images" src="images/Group 33059.png" alt="">
+        <img class="images" src="images/image 6.png" alt="">
+        <img class="images" src="images/image 7.png" alt="">
       </div>
       </section>
   </body>
