--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           class="link-button"
           target="_blank"
           href="https://www.linkedin.com/in/kinshuk-mohanto-135175191/"
-          >HIRE ME</a
+          >Hire Me</a
         >
       </div>
       <div class="half-widit">
@@ -60,7 +60,7 @@
           class="link-button"
           target="_blank"
           href="https://www.linkedin.com/in/kinshuk-mohanto-135175191/"
-          >HIRE ME</a
+          >Download CV</a
         >
       </div>
     </section>
